2006-09-15  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/structural.properties.R (graph.density) : added
	* interfaces/R/src/rinterface.c (R_igraph_density) : added

2006-09-05  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/games.R (grg.game) : added
	* interfaces/R/src/rinterface.c (R_igraph_grg_game) : added

2006-09-03  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/conversion.R (get.adjacency) : added 'attr', 
	'names' and 'binary' arguments

2006-08-29  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/structural.properties.R (bonpow) : added, 
	ported from SNA

2006-08-21  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/iterators.R (E<-) : value is last argument,
	this is the R policy

2006-08-16  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/src/rinterface.c (R_igraph_attribute_get_info) : 
	INTSXP is considered at numeric attribute

2006-08-14  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/src/rinterface.c (R_igraph_motifs_randesu_estimate) :
	repaired

2006-08-12  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/iterators.R (P, path) : removed, they're 
	built into E()
	(E, E<-) : add P, path arguments

2006-08-10  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/iterators.R ([.igraph.vs, [.igraph.es) : 
	new indexing functions: nei(), adj(), from(), to()
	* interfaces/R/src/rinterface.c (R_igraph_vs_nei, R_igraph_vs_adj)
	(R_igraph_es_adj) : added

2006-08-08  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/foreign.R (read.graph.graphml) : removed 
	'directed' attribute
	* interfaces/R/src/rinterface.c (R_igraph_read_graph_graphml) :
	remove 'directed' attribute

2006-08-07  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/foreign.R (read.graph, write.graph) :
	added graphml format
	(read.graph.graphml, write.graph.graphml) : added
	* interfaces/R/src/rinterface.c (R_igraph_read_graph_graphml)